--- a/abaut.html
+++ b/abaut.html
@@ -22,7 +22,7 @@
                 
                 <!-- Enlaces de navegación para desktop -->
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Servicios</a>
+                    <a href="index.html" class="nav-link">Inicio</a>
                     <a href="#about" class="nav-link">Nosotros</a>
                     <a href="contacto.html" class="nav-link">Contacto</a>
                     <a href="portafolio.html" class="nav-link">Portafolio</a>
