--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
                 <!-- Enlaces de navegación para desktop -->
                 <div class="nav-links">
-                    <a href="#services" class="nav-link">Servicios</a>
+                    <a href="#services" class="nav-link">Inicio</a>
                     <a href="abaut.html" class="nav-link">Nosotros</a>
                     <a href="contacto.html" class="nav-link">Contacto</a>
                     <a href="portafolio.html" class="nav-link">Portafolio</a>
